--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+
 }
