--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.be4">
+    package="com.example.be4" >
+
     <uses-sdk
-        android:minSdkVersion="16"
         android:maxSdkVersion="17"
+        android:minSdkVersion="16"
         tools:overrideLibrary="pl.droidsonroids.gif" />
 
     <application
@@ -13,10 +14,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BE4">
+        android:theme="@style/Theme.BE4" >
+        <activity
+            android:name=".OwnerHomePage"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".Login"
-            android:exported="false">
+            android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -26,7 +34,7 @@
             android:exported="true" />
         <activity
             android:name=".StartPage"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
