--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.be4">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-sdk
         android:maxSdkVersion="17"
         android:minSdkVersion="16"
@@ -14,7 +16,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BE4">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:theme="@style/Theme.BE4"
+        tools:targetApi="n">
         <activity
             android:name=".Reports"
             android:exported="false">
