Filter the data on SupervisorProjects.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
         android:theme="@style/Theme.BE4"
         tools:targetApi="n">
         <activity
+            android:name=".SupervisorProjects"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".AddSite"
             android:exported="false">
             <meta-data
